修改打包路径

--- a/electron/wallpaper/html/set.html
+++ b/electron/wallpaper/html/set.html
@@ -69,6 +69,7 @@
 		});
 		let btn = document.getElementById('btn')
 		btn.onclick = () => {
+			window.trayAPI.get()
 			window.trayAPI.setPaper(path)
 		}
 	</script>
