--- a/electron/wallpaper/html/set.html
+++ b/electron/wallpaper/html/set.html
@@ -2,7 +2,7 @@
  * @Author: jares
  * @Date: 2022-12-28 21:50:27
  * @LastEditors: jares
- * @LastEditTime: 2024-08-08 11:25:55
+ * @LastEditTime: 2024-08-18 00:07:54
  * @Description:
  *
  * Copyright (c) 2022 by jares, All Rights Reserved.
@@ -66,8 +66,18 @@
 	<button id="btnLocal">设置本地</button>
 	<button id="btnNetwork">设置网络</button>
 	<img src="" />
+	<div id="content"></div>
 </body>
 <script>
+
+	setInterval(async () => {
+		try {
+			const filePath = await window.updateApi.updatePercent()
+			document.getElementById('content').innerText = filePath;
+		} catch { }
+	}, 1000)
+
+
 	var path = ''
 	document.getElementById('fileInput').addEventListener('change', (event) => {
 		const fileList = event.target.files; // 文件列表
