--- a/electron/wallpaper/html/set.html
+++ b/electron/wallpaper/html/set.html
@@ -2,7 +2,7 @@
  * @Author: jares
  * @Date: 2022-12-28 21:50:27
  * @LastEditors: jares
- * @LastEditTime: 2024-08-18 23:36:49
+ * @LastEditTime: 2024-08-21 10:44:06
  * @Description:
  *
  * Copyright (c) 2022 by jares, All Rights Reserved.
@@ -14,6 +14,7 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" href="../static/style/style.css">
 	<title>桌面程序</title>
 	<style>
 		* {
