--- a/electron/wallpaper/html/update.html
+++ b/electron/wallpaper/html/update.html
@@ -2,7 +2,7 @@
  * @Author: jares
  * @Date: 2023-01-06 10:49:22
  * @LastEditors: jares
- * @LastEditTime: 2024-08-19 23:03:21
+ * @LastEditTime: 2024-08-21 11:32:02
  * @Description:
  *
  * Copyright (c) 2023 by jares, All Rights Reserved.
@@ -14,12 +14,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<link rel="stylesheet" href="../static/style/style.css">
 	<style>
-		* {
-			margin: 0;
-			padding: 0;
-		}
-
 		.container {
 			width: 100vw;
 			height: 100vh;
@@ -63,6 +59,17 @@
 		.icon {
 			width: 12px;
 			height: 12px;
+			cursor: pointer;
+		}
+
+		.icon path {
+			fill: rgba(255, 255, 255, 1);
+			/* 设置填充颜色为蓝色 */
+		}
+
+		.icon:hover path {
+			fill: rgba(255, 255, 255, 0.5);
+			/* 设置填充颜色为蓝色 */
 		}
 
 		h1 {
@@ -72,6 +79,7 @@
 		.version {
 			font-size: 28px;
 		}
+
 		.update {
 			-webkit-app-region: no-drag;
 			-webkit-user-select: all;
@@ -84,13 +92,23 @@
 		<div id="header" class="header">
 			<div class="btn-group">
 				<div id="close" title="关闭">
-					<svg t="1724077192805" class="icon" viewBox="0 0 1024 1024" version="1.1"
-						xmlns="http://www.w3.org/2000/svg" p-id="4441" width="256" height="256">
+					<!-- <svg id="icon" width="28" height="28" xmlns="http://www.w3.org/2000/svg">
 						<path
-							d="M594.983303 512.554066l411.9697 411.9697a58.304836 58.304836 0 0 1-82.428037 82.428036L512.555267 594.982103 100.585567 1006.951802a58.304836 58.304836 0 0 1-82.428036-82.428036L430.127231 512.554066 18.157531 100.584367A58.304836 58.304836 0 1 1 100.585567 18.156331L512.555267 430.12603 924.524966 18.156331a58.304836 58.304836 0 0 1 82.428037 82.428036L594.983303 512.554066z"
-							fill="#ffffff" p-id="4442"></path>
-					</svg>
+							d="M594.983303 512.554066l411.9697 411.9697a58.304836 58.304836 0 0 1-82.428037 82.428036L512.555267 594.982103 100.585567 1006.951802a58.304836 58.304836 0 0 1-82.428036-82.428036L430.127231 512.554066 18.157531 100.584367A58.304836 58.304836 0 1 1 100.585567 18.156331L512.555267 430.12603 924.524966 18.156331a58.304836 58.304836 0 0 1 82.428037 82.428036L594.983303 512.554066z">
+						</path>
+					</svg> -->
+					<!-- <svg id="mySVG" width="128" height="128" xmlns="http://www.w3.org/2000/svg">
+						<path
+							d="M594.983303 512.554066l411.9697 411.9697a58.304836 58.304836 0 0 1-82.428037 82.428036L512.555267 594.982103 100.585567 1006.951802a58.304836 58.304836 0 0 1-82.428036-82.428036L430.127231 512.554066 18.157531 100.584367A58.304836 58.304836 0 1 1 100.585567 18.156331L512.555267 430.12603 924.524966 18.156331a58.304836 58.304836 0 0 1 82.428037 82.428036L594.983303 512.554066z">
+						</path>
+					</svg> -->
 				</div>
+				<svg t="1724077192805" id="icon" class="icon" viewBox="0 0 1024 1024" version="1.1"
+					xmlns="http://www.w3.org/2000/svg" p-id="4441" width="256" height="256">
+					<path
+						d="M594.983303 512.554066l411.9697 411.9697a58.304836 58.304836 0 0 1-82.428037 82.428036L512.555267 594.982103 100.585567 1006.951802a58.304836 58.304836 0 0 1-82.428036-82.428036L430.127231 512.554066 18.157531 100.584367A58.304836 58.304836 0 1 1 100.585567 18.156331L512.555267 430.12603 924.524966 18.156331a58.304836 58.304836 0 0 1 82.428037 82.428036L594.983303 512.554066z"
+						fill="#ffffff" p-id="4442"></path>
+				</svg>
 			</div>
 		</div>
 		<div class="body">
