--- a/electron/wallpaper/html/update.html
+++ b/electron/wallpaper/html/update.html
@@ -30,7 +30,7 @@
 		}
 
 		.box {
-			height: calc(100% - 100px);
+			height: calc(100% - 72px);
 			background: rgba(109, 178, 109, 1);
 		}
 
@@ -83,17 +83,31 @@
 		}
 
 		.body .version {
+			font-family: 'BAHNSCHRIFT';
 			font-size: 28px;
 			height: 40px;
 			line-height: 40px;
 		}
 
 		.update {
-			width: 100px;
-			margin: 20px auto;
+			/* width: 100px; */
+			padding: 20px;
+			text-align: center;
 			cursor: pointer;
+			position: relative;
+			box-sizing: border-box;
 			-webkit-app-region: no-drag;
 			-webkit-user-select: all;
+		}
+
+		.update .bg {
+			background: rgba(109, 178, 109, 0.5);
+			height: 100%;
+			position: absolute;
+			top: 0;
+			left: 0;
+			z-index: 0;
+			transition: all .2s;
 		}
 
 		.update span {
@@ -101,11 +115,13 @@
 			width: 100px;
 			height: 32px;
 			color: #fff;
-			display: block;
+			display: inline-block;
 			line-height: 32px;
 			text-align: center;
 			background-color: rgba(109, 178, 109, 1);
 			border-radius: 3px;
+			position: relative;
+			z-index: 0;
 		}
 	</style>
 </head>
@@ -132,6 +148,7 @@
 			</div>
 		</div>
 		<div id="update" class="update">
+			<div id="bg" class="bg"></div>
 			<span>
 				更新
 			</span>
@@ -147,7 +164,8 @@
 	})
 	// 更新进度
 	window.updateApi.updatePercent((value) => {
-		document.getElementById('percent').innerText = value;
+		document.getElementById('bg').style.width = value + '%'
+		// document.getElementById('percent').innerText = value;
 	})
 	let closeBtn = document.getElementById('close')
 	closeBtn.onclick = () => {
