--- a/electron/wallpaper/html/tray.html
+++ b/electron/wallpaper/html/tray.html
@@ -9,74 +9,70 @@
 -->
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>桌面程序</title>
-		<style>
-			* {
-				margin: 0;
-				padding: 0;
-			}
-			body {
-				width: 250px;
-				height: 400px;
-				padding: 20px;
-				box-sizing: border-box;
-				overflow: hidden;
-			}
-			.container {
-				width: 100%;
-				height: 100%;
-				color: #fff;
-				border-radius: 5px;
-				background: rgba(36, 36, 36, 1);
-				box-shadow: 0 0 10px rgba(36, 36, 36, 0.5);
-				overflow: hidden;
-			}
-			.container ul {
-				padding: 10px 0;
-			}
-			.container ul li {
-				font-size: 14px;
-				height: 35px;
-				padding: 0 20px;
-				line-height: 35px;
-				box-sizing: border-box;
-				cursor: pointer;
-			}
-			.container ul li:hover {
-				color: #fff;
-				background-color: rgba(255, 255, 255, 0.2);
-			}
-		</style>
-	</head>
-	<body>
-		<div class="container">
-			<ul>
-				<li id="set">设置</li>
-				<li id="update">更新</li>
-				<li id="quit">退出</li>
-			</ul>
-		</div>
-	</body>
-	<script>
-		function quitFun() {
-			window.trayAPI.quit()
-		}
-		function setFun() {
-			window.trayAPI.set()
-		}
-		function updateFun() {
-			window.updateApi.update()
+
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>桌面程序</title>
+	<link rel="stylesheet" href="../static/style/style.css">
+	<style>
+		.container {
+			width: 100%;
+			height: 100%;
+			color: #fff;
+			border-radius: 5px;
+			background: rgba(36, 36, 36, 1);
+			box-shadow: 0 0 10px rgba(36, 36, 36, 0.5);
+			overflow: hidden;
 		}
 
-		let set = document.getElementById('set')
-		let quit = document.getElementById('quit')
-		let update = document.getElementById('update')
-		set.onclick = setFun
-		quit.onclick = quitFun
-		update.onclick = updateFun
-	</script>
+		.container ul {
+			padding: 10px 0;
+		}
+
+		.container ul li {
+			font-size: 14px;
+			height: 35px;
+			padding: 0 20px;
+			line-height: 35px;
+			box-sizing: border-box;
+			cursor: pointer;
+		}
+
+		.container ul li:hover {
+			color: #fff;
+			background-color: rgba(255, 255, 255, 0.2);
+		}
+	</style>
+</head>
+
+<body>
+	<div class="container">
+		<ul>
+			<li id="set">设置</li>
+			<li id="update">更新</li>
+			<li id="quit">退出</li>
+		</ul>
+	</div>
+</body>
+<script>
+	function quitFun() {
+		window.trayAPI.quit()
+	}
+	function setFun() {
+		window.trayAPI.set()
+	}
+	function updateFun() {
+		window.updateApi.update()
+	}
+
+	let set = document.getElementById('set')
+	let quit = document.getElementById('quit')
+	let update = document.getElementById('update')
+	set.onclick = setFun
+	quit.onclick = quitFun
+	update.onclick = updateFun
+</script>
+
 </html>
