--- a/electron/wallpaper/html/update.html
+++ b/electron/wallpaper/html/update.html
@@ -2,7 +2,7 @@
  * @Author: jares
  * @Date: 2023-01-06 10:49:22
  * @LastEditors: jares
- * @LastEditTime: 2024-08-21 13:59:43
+ * @LastEditTime: 2024-08-21 23:21:03
  * @Description:
  *
  * Copyright (c) 2023 by jares, All Rights Reserved.
@@ -16,16 +16,24 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="../static/style/style.css">
 	<style>
-		.container {
+		body {
 			width: 100vw;
 			height: 100vh;
+			padding: 20px;
+			box-sizing: border-box;
+			overflow: hidden;
+		}
+
+		.container {
+			width: 100%;
+			height: 100%;
 			color: #fff;
 			border-radius: 5px;
-			box-shadow: 0 0 10px rgba(0, 0, 0, 1);
 			overflow: hidden;
+			background: rgba(255, 255, 255, 1);
+			box-shadow: 0px 0px 10px rgba(204, 204, 204, 0.5);
 			-webkit-app-region: drag;
 			-webkit-user-select: none;
-			background: rgba(255, 255, 255, 1);
 
 		}
 
