--- a/electron/wallpaper/html/set.html
+++ b/electron/wallpaper/html/set.html
@@ -2,7 +2,7 @@
  * @Author: jares
  * @Date: 2022-12-28 21:50:27
  * @LastEditors: jares
- * @LastEditTime: 2024-08-21 10:44:06
+ * @LastEditTime: 2024-08-21 23:38:23
  * @Description:
  *
  * Copyright (c) 2022 by jares, All Rights Reserved.
@@ -17,27 +17,23 @@
 	<link rel="stylesheet" href="../static/style/style.css">
 	<title>桌面程序</title>
 	<style>
-		* {
-			margin: 0;
-			padding: 0;
-		}
-
-		body {
-			width: 250px;
-			height: 400px;
-			padding: 20px;
-			box-sizing: border-box;
-			overflow: hidden;
-		}
-
 		.container {
 			width: 100%;
 			height: 100%;
 			color: #fff;
 			border-radius: 5px;
-			background: rgba(36, 36, 36, 1);
-			box-shadow: 0 0 10px rgba(36, 36, 36, 0.5);
 			overflow: hidden;
+			background: rgba(255, 255, 255, 1);
+			box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+			/* -webkit-app-region: drag;
+			-webkit-user-select: none; */
+		}
+
+		.container .box {
+			height: 100%;
+			background: rgba(109, 178, 109, 1);
+			padding: 50px;
+			box-sizing: border-box;
 		}
 
 		.container ul {
@@ -61,13 +57,17 @@
 </head>
 
 <body>
-	<h1>设置</h1>
-	<input type="text" id="network" />
-	<input type="file" value="" id="fileInput" />
-	<button id="btnLocal">设置本地</button>
-	<button id="btnNetwork">设置网络</button>
-	<img src="" />
-	<div id="content"></div>
+	<div class="container">
+		<div class="box">
+			<h1>设置</h1>
+			<input type="text" id="network" />
+			<input type="file" value="" id="fileInput" />
+			<button id="btnLocal">设置本地</button>
+			<button id="btnNetwork">设置网络</button>
+			<img src="" />
+			<div id="content"></div>
+		</div>
+	</div>
 </body>
 <script>
 	// window.updateApi.isUpdate()
