修改设置页面

--- a/electron/wallpaper/html/set.html
+++ b/electron/wallpaper/html/set.html
@@ -2,7 +2,7 @@
  * @Author: jares
  * @Date: 2022-12-28 21:50:27
  * @LastEditors: jares
- * @LastEditTime: 2024-08-22 14:20:54
+ * @LastEditTime: 2024-08-23 17:26:57
  * @Description:
  *
  * Copyright (c) 2022 by jares, All Rights Reserved.
@@ -117,7 +117,13 @@
 		}
 
 		.body .body-box .local input {
+			width: 100%;
+			height: 100%;
+			display: block;
 			opacity: 0;
+			position: relative;
+			z-index: 1;
+			cursor: pointer;
 		}
 
 		.body .body-box .local span {
@@ -126,6 +132,7 @@
 			position: absolute;
 			top: 0;
 			left: 0;
+			z-index: 0;
 		}
 
 		.body .body-box .network {
