添加获取图片数据列表功能

--- a/electron/wallpaper/html/set.html
+++ b/electron/wallpaper/html/set.html
@@ -2,7 +2,7 @@
  * @Author: jares
  * @Date: 2022-12-28 21:50:27
  * @LastEditors: jares
- * @LastEditTime: 2024-08-23 17:26:57
+ * @LastEditTime: 2025-06-24 09:57:25
  * @Description:
  *
  * Copyright (c) 2022 by jares, All Rights Reserved.
@@ -193,6 +193,9 @@
 						<input type="text" id="network" />
 						<div class="btn" id="btnNetwork">设置网络</div>
 					</div>
+					<div class="network">
+						<div class="btn" id="getData">获取数据</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -220,6 +223,13 @@
 		var network = document.getElementById('network').value
 		window.trayAPI.setPaper({url: network, type: type})
 	}
+	let btnGetData = document.getElementById('getData')
+	btnGetData.onclick = () => {
+		// window.trayAPI.get()
+		// type 0 本地 1网络
+		window.trayAPI.getData({})
+	}
+
 	// 关闭
 	let closeBtn = document.getElementById('close')
 	closeBtn.onclick = () => {
